Fixes issues with button not visible

--- a/_sass/_cookie.scss
+++ b/_sass/_cookie.scss
@@ -1,17 +1,16 @@
 #cookieConsent {
-  background-color: rgba(20,20,20,0.8);
+  background-color: rgba(20, 20, 20, 0.8);
   min-height: 26px;
   font-size: 14px;
-  color:#ccc;
+  color: #ccc;
   line-height: 26px;
   padding: 20px 0;
   font-family: "Trebuchet MS", Helvetica, sans-serif;
-  position: fixed;
+  position: sticky;
   bottom: 0;
   display: block;
   z-index: 9999;
-  text-align:center;
-  width: 100%;
+  text-align: center;
 
   span {
     display: inline-block;
